로그 기능 전체 코드 리펙토링